Fix vimeo and youtube shoertcodes in dark mode

--- a/sass/deep-thought.sass
+++ b/sass/deep-thought.sass
@@ -26,5 +26,12 @@ section
 
 img[theme="dark"],
 picture[theme="dark"],
+pre[theme="dark"],
 video[theme="dark"]
+    filter: invert(1) hue-rotate(180deg);
+
+
+.vimeo[theme="dark"],
+.youtube[theme="dark"],
+.chart[theme="dark"]
     filter: invert(1) hue-rotate(180deg);
